--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./styles/style.css">
+
     <title>Студія</title>
 </head>
 <body>
     
-    <header>
-        <nav>
-            <a href="/">WebStudio</a>  
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="page-header">
+        <nav class="inline">
+            <a href="/" class="logo" ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a>  
+            <ul class="site-nav">
+                <li class="item inline"><a href="/" class="link">Студия</a></li>
+                <li class="item inline"><a href="" class="link">Портфолио</a></li>
+                <li class="item inline"><a href="#" class="link">Контакты</a></li>
             </ul>   
         </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contact inline">
+            <li class="item inline"><a href="mai lto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item inline"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul> 
     </header>
 
