--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <ul class="header-contact inline">
-            <li class="item inline"><a href="mai lto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item inline"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li class="item inline"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul> 
     </header>
@@ -34,9 +34,9 @@
     <main>
 
         <!-- Hero section -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title align-center">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="cta align-center">Заказать услугу</button>
         </section>
 
         <!-- Features section -->
