--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="inline">
             <a href="/" class="logo" ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a>  
             <ul class="site-nav">
-                <li class="item inline"><a href="/" class="link">Студия</a></li>
+                <li class="item inline"><a href="/" class="link current">Студия</a></li>
                 <li class="item inline"><a href="" class="link">Портфолио</a></li>
                 <li class="item inline"><a href="#" class="link">Контакты</a></li>
             </ul>   
