--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <link rel="stylesheet" href="styles/style.css">
 
-    <title>Студія</title>
+    <title>Студия</title>
 </head>
 <body>
     
     <header class="page-header">
         <div class="content-width">
             <nav class="inline">
-                <a href="/" class="logo" ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a>  
+                <a href="/index.html" class="logo" ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a>  
                 <ul class="site-nav">
-                    <li class="item inline"><a href="/" class="link current">Студия</a></li>
-                    <li class="item inline"><a href="" class="link">Портфолио</a></li>
+                    <li class="item inline"><a href="#" class="link current">Студия</a></li>
+                    <li class="item inline"><a href="/portfolio.html" class="link">Портфолио</a></li>
                     <li class="item inline"><a href="#" class="link">Контакты</a></li>
                 </ul>   
             </nav>
@@ -117,7 +117,7 @@
     <footer class="dark-grey-background space-mid">
         <div class="content-width">
             <div class="space-bottom-extra-small">
-                <a href="/" class="logo"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
+                <a href="/index.html" class="logo"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
             </div>
             
             <address>
