--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="/index.html" class="logo" ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a>  
                 <ul class="site-nav">
                     <li class="item inline"><a href="#" class="link current">Студия</a></li>
-                    <li class="item inline"><a href="/portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item inline"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="item inline"><a href="#" class="link">Контакты</a></li>
                 </ul>   
             </nav>
